--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,47 @@ jobs:
     needs: [test]
     runs-on: ubuntu-latest
     timeout-minutes: 120
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Compute cross image cache key
+        id: cache-key
+        run: |
+          HASH=$(cat Dockerfile scripts/xsfx-entrypoint.sh | sha256sum | cut -c1-16)
+          echo "hash=$HASH" >> "$GITHUB_OUTPUT"
+          echo "image=ghcr.io/${{ github.repository }}/cross-cache:$HASH" >> "$GITHUB_OUTPUT"
+
+      - name: Log in to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull cached cross image
+        id: cache
+        continue-on-error: true
+        run: |
+          if docker pull "${{ steps.cache-key.outputs.image }}"; then
+            docker tag "${{ steps.cache-key.outputs.image }}" xsfx-build
+            echo "hit=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "hit=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Build all targets
         run: ./build.sh
+
+      - name: Push cross image to cache
+        if: steps.cache.outputs.hit != 'true'
+        continue-on-error: true
+        run: |
+          docker tag xsfx-build "${{ steps.cache-key.outputs.image }}"
+          docker push "${{ steps.cache-key.outputs.image }}"
 
       - name: List artifacts
         run: ls -lh dist/
